--- a/docker/manager/Dockerfile
+++ b/docker/manager/Dockerfile
@@ -1,4 +1,5 @@
-FROM golang:1.22-alpine as build
+FROM golang:alpine AS build
+ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /app
 COPY . .
 RUN go mod download
@@ -7,5 +8,5 @@ RUN go build -o manager cmd/manager/main.go
 FROM alpine:latest
 WORKDIR /root/
 COPY --from=build /app/manager .
-EXPOSE 3000
+EXPOSE 2933
 CMD ["./manager"]
