--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,7 +1,8 @@
 # Build Stage
-FROM node:18-alpine as build
+FROM node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
+RUN npm config set registry https://registry.npmmirror.com/
 RUN npm install
 COPY . .
 RUN npm run build
@@ -10,5 +11,5 @@ RUN npm run build
 FROM nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-EXPOSE 80
+EXPOSE 7729
 CMD ["nginx", "-g", "daemon off;"]
