--- a/docker/manager/Dockerfile
+++ b/docker/manager/Dockerfile
@@ -1,8 +1,13 @@
 FROM golang:alpine AS build
 ENV GOPROXY=https://goproxy.cn,direct
 WORKDIR /app
-COPY . .
+COPY go.mod go.sum ./
 RUN go mod download
+COPY . .
+# Need CGO for SQLite (or use CGO_ENABLED=0 with pure go sqlite if preferred, but standard driver needs CGO)
+# Alpine needs gcc/musl-dev for CGO
+RUN apk add --no-cache gcc musl-dev
+ENV CGO_ENABLED=1
 RUN go build -o manager cmd/manager/main.go
 
 FROM alpine:latest
