Switch to pure Go SQLite driver
Replaced gorm.io/driver/sqlite with github.com/glebarez/sqlite for pure Go SQLite support, removing CGO dependency. Updated Dockerfile to set CGO_ENABLED=0 and removed Alpine build dependencies for CGO. Added related dependencies in go.mod and go.sum.

--- a/docker/manager/Dockerfile
+++ b/docker/manager/Dockerfile
@@ -4,10 +4,8 @@ WORKDIR /app
 COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
-# Need CGO for SQLite (or use CGO_ENABLED=0 with pure go sqlite if preferred, but standard driver needs CGO)
-# Alpine needs gcc/musl-dev for CGO
-RUN apk add --no-cache gcc musl-dev
-ENV CGO_ENABLED=1
+# Use Pure Go SQLite (no CGO needed)
+ENV CGO_ENABLED=0
 RUN go build -o manager cmd/manager/main.go
 
 FROM alpine:latest
