--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,5 @@
 # Build Stage
-FROM node:18-alpine AS build
+FROM m.daocloud.io/docker.io/library/node:18-alpine AS build
 WORKDIR /app
 COPY package*.json ./
 RUN npm config set registry https://registry.npmmirror.com/
@@ -8,7 +8,7 @@ COPY . .
 RUN npm run build
 
 # Production Stage
-FROM nginx:alpine
+FROM m.daocloud.io/docker.io/library/nginx:alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 7729
