Add server service and enhance deployment config
Introduces a new 'server' service to docker-compose with UDP and HTTP ports, and updates deploy.sh to auto-detect NODE_ID and PUBLIC_IP for configuration. Improves nginx.conf with security rules to block hidden files and common scanner paths, and clarifies API proxying logic.

--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -2,6 +2,20 @@ server {
     listen 7729;
     server_name localhost;
 
+    # Security: Block hidden files (like .env, .git)
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Security: Block common scanner paths
+    location ~* (wp-admin|wp-login|composer.json|composer.lock|package.json|package-lock.json) {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
@@ -9,6 +23,11 @@ server {
     }
 
     # Proxy API requests to Manager
+    # The Manager (Go) has routes like "/api/stats", "/api/register_node".
+    # So we should forward "/api/" directly to "http://manager:2933/api/".
+    # Nginx logic:
+    # location /api/ { proxy_pass http://manager:2933/api/; } -> requests /api/foo go to /api/foo
+    # This is correct.
     location /api/ {
         proxy_pass http://manager:2933/api/;
         proxy_set_header Host $host;
