--- a/web/nginx.conf
+++ b/web/nginx.conf
@@ -29,8 +29,11 @@ server {
     # location /api/ { proxy_pass http://manager:2933/api/; } -> requests /api/foo go to /api/foo
     # This is correct.
     location /api/ {
-        proxy_pass http://manager:2933/api/;
+        # Trailing slash is CRITICAL here
+        proxy_pass http://manager:2933/api/; 
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
